--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,34 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "outDir": "dist",
-    "target": "es5",
-    "module": "commonjs",
+    "target": "esnext",
+    "module": "es2015",
+    "moduleResolution": "bundler",
+    "esModuleInterop": true,
     "jsx": "react",
-    "declaration": false,
-    "noImplicitAny": false,
-    "removeComments": true,
-    "noLib": false,
-    "preserveConstEnums": true,
-    "suppressImplicitAnyIndexErrors": true
+    "allowJs": true,
+    "strict": true,
+    "strictNullChecks" : true,
+    "strictFunctionTypes" : true,
+    "strictBindCallApply" : true,
+    "strictPropertyInitialization" : true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "declaration": true,
+    "noImplicitAny" : true,
+    "noImplicitThis" : true,
+    "useUnknownInCatchVariables" : true,
+    "alwaysStrict" : true,
+    "noUnusedLocals" : true,
+    "noUnusedParameters" : true,
+    "exactOptionalPropertyTypes" : true,
+    "noImplicitReturns" : true,
+    "noFallthroughCasesInSwitch" : true,
+    "noUncheckedIndexedAccess" : true,
+    "noImplicitOverride" : true,
+    "noPropertyAccessFromIndexSignature" : true
   },
-  "filesGlob": [
-    "./**/*.ts",
-    "./**/*.tsx",
-    "!./node_modules/**/*"
-  ]
+  "exclude": ["node_modules"],
+  "files":  ["src/index.tsx"]
 }
