--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "jsx": "react",
     "allowJs": true,
+    "checkJs": true,
     "strict": true,
     "strictNullChecks" : true,
     "strictFunctionTypes" : true,
